--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mern Project Using MongDB, Express, React, Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -13,9 +13,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/MantuBhagat/Long-Project/issues"
   },
-  "homepage": "https://github.com/MantuBhagat/Long-Project#readme"
+  "homepage": "https://github.com/MantuBhagat/Long-Project#readme",
+  "dependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
